# metamcp_rust

./: .env.example  .gitignore  Cargo.toml  MIGRATION_PLAN.md  README.md  SETUP.md  SHUTTLE_DEPLOYMENT.md  docker-compose.yml
.claude/subagents/: rust-reviewer.md
api_security/: Cargo.toml  OWASP_API_SECURITY.md  README.md  owasp_api_security_report.md  owasp_api_security_report_after_fixes.md
api_security/src/: main.rs
benches/: auth_bench.rs  streaming_bench.rs
examples/: backend_server_1.rs  backend_server_2.rs  test_client.rs
mcp_learning_guide/: 01-introduction.md  02-json-rpc-basics.md  03-protocol-types.md  04-capabilities.md  05-http-transport.md  06-authentication.md  07-building-server.md  08-best-practices.md  README.md
migrations/: 20240101000001_create_api_keys.sql  20240101000002_create_mcp_servers.sql
rust_learning_guide/: 01_tokio.md  02_async_utilities.md  03_axum.md  04_tower.md  05_serde.md  06_sqlx.md  07_validator.md  08_authentication.md  09_error_handling.md  10_tracing.md  11_reqwest.md  12_utilities.md  13_clap.md  14_utoipa.md  README.md  rust_intermediate_representations.md
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/handlers/: auth.rs  health.rs  mcp.rs  mcp_gateway.rs  mod.rs
src/api/middleware/: mod.rs  security.rs
src/api/routes/: mod.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  service.rs
src/config/: mod.rs  settings.rs
src/db/: mod.rs
src/db/models/: api_key.rs  mcp_server.rs  mod.rs
src/db/repositories/: api_key.rs  mcp_server.rs  mod.rs
src/mcp/: mod.rs  proxy.rs  server_manager.rs
src/mcp/protocol/: mod.rs  types.rs
src/streaming/: manager.rs  mod.rs
src/utils/: error.rs  mod.rs  security.rs
tests/integration/: auth_flow.rs  mcp_proxy.rs  mod.rs
tests/unit/: auth_tests.rs  mod.rs  protocol_tests.rs  streaming_tests.rs
