[package]
name = "api_security_test"
version = "0.1.0"
edition = "2021"
description = "API Security Testing Tool for MetaMCP based on OWASP Top 10"

[[bin]]
name = "api_security_test"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
clap = { version = "4", features = ["derive"] }
url = "2"
